# uriocr

./: README.md  goal.yaml  pyproject.toml  uriocr.markpact.md
data/: events.jsonl
markpacts/: uriocr.markpact.md
tests/: test_import.py  test_manifest.py  test_runtime.py
uriocr/: handlers.py  manifest.yaml
