[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uriocr"
version = "0.1.0"
description = "ocr:// URI capability pack for urisys-node"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "urisys contributors" }, { name = "Tom Sapletta", email = "tom@sapletta.com" }]
keywords = ["uri", "urisys", "uriocr"]
dependencies = ["urisysedge>=0.1.0"]

[project.optional-dependencies]
real = ["pytesseract>=0.3.10", "Pillow>=10.0"]
dev = ["pytest>=8.0", "goal>=2.1.0"]

[tool.uv.sources]
urisysedge = { path = "../urisysedge", editable = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["uriocr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
